@@ -121,11 +121,6 @@ grub_install_SOURCES = util/i386/pc/grub-install.in
 
 # For grub-mkrescue.
 grub_mkrescue_SOURCES = util/i386/pc/grub-mkrescue.in
-CLEANFILES += grub-mkrescue
-
-grub-mkrescue: util/i386/pc/grub-mkrescue.in config.status
-	./config.status --file=grub-mkrescue:util/i386/pc/grub-mkrescue.in
-	chmod +x $@
 
 # Modules.
 pkgdata_MODULES = _chain.mod _linux.mod linux.mod normal.mod \
